[JAVA-4584] Enabled core-java-15 module